<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingTop="@dimen/activity_main_padding_superior">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                tools:ignore="Suspicious0dp"
                android:padding="@dimen/activity_main_padding_linear">

                <EditText android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/activity_main_nombre"
                    android:id="@+id/activity_main_name_editar_texto"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/activity_main_telefono"
                    android:inputType="number"
                    android:id="@+id/activity_main_phone_editar_texto"/>

                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_main_escolaridad"/>

                <Spinner android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/activity_main_escolaridad"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_main_genero"/>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/activity_main_genero">

        <RadioButton android:layout_width="0dp"
            android:layout_weight=".7"
            android:layout_height="wrap_content"
            android:text="@string/activity_main_genero_f"
            android:id="@+id/activity_main_genero_f"
            android:checked="true"
            android:onClick="RbtnClick"/>

        <RadioButton android:layout_width="0dp"
            android:layout_weight=".7"
            android:layout_height="wrap_content"
            android:text="@string/activity_main_genero_m"
            android:id="@+id/activity_main_genero_m"
            android:onClick="RbtnClick"/>

    </RadioGroup>
                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_main_libro_f"/>

                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/activity_main_libro"/>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_main_deporte"
                    android:id="@+id/activity_main_deporte"
                    android:onClick="onCheckBoxClicked"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_main_btn_altura"
        android:layout_weight=".1"
        android:text="@string/activity_main_btn_limpiar"
        tools:ignore="Suspicious0dp"
        android:id="@+id/activity_main_limpiar"/>
</LinearLayout>